# rust-grpc

./: README.md
master/: Cargo.toml
master/src/: main.rs
proto/: random.proto
worker/: Cargo.toml  build.rs
worker/src/: main.rs  random.rs
