[package]
name = "master"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"

[build-dependencies]
tonic-build = "0.10.0"
